crates/elm-client-gen-derive-tests/tests/compile_fail/generic_struct.rs
use elm_client_gen_core::ElmType;

#[derive(ElmType)]
#[elm(module = "Api.Page")]
pub struct Page<T> {
    pub items: Vec<T>,
}

fn main() {}
